Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ text-align: right;
 
 }
 
+.speaker-body {
+  overflow-x: hidden;
+}
+
 
 .separator {
   width: 100%;
